gen/civicinfo/v2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-civicinfo2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/civicinfo/v2/lib)
error[E0072]: recursive type `schemas::AdministrationRegion` has infinite size
  --> gen/civicinfo/v2/lib/src/lib.rs:14:5
   |
14 |     pub struct AdministrationRegion {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
...
23 |         pub local_jurisdiction: Option<crate::schemas::AdministrationRegion>,
   |         -------------------------------------------------------------------- recursive without indirection
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::AdministrationRegion` representable

error[E0072]: recursive type `schemas::VoterInfoRequest` has infinite size
    --> gen/civicinfo/v2/lib/src/lib.rs:1430:5
     |
1430 |     pub struct VoterInfoRequest {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
...
1434 |         pub voter_info_segment_result: Option<crate::schemas::VoterInfoSegmentResult>,
     |         ----------------------------------------------------------------------------- recursive without indirection
     |
     = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::VoterInfoRequest` representable

error[E0072]: recursive type `schemas::VoterInfoSegmentResult` has infinite size
    --> gen/civicinfo/v2/lib/src/lib.rs:1498:5
     |
1498 |     pub struct VoterInfoSegmentResult {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
...
1505 |         pub request: Option<crate::schemas::VoterInfoRequest>,
     |         ----------------------------------------------------- recursive without indirection
     |
     = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::VoterInfoSegmentResult` representable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0072`.
error: Could not compile `google-civicinfo2`.

To learn more, run the command again with --verbose.
